--- a/experiments/builds/index.html
+++ b/experiments/builds/index.html
@@ -77,13 +77,13 @@
                   <td align="right">
                      <a href="/forms">Forms</a>
                   </td>
-                  <td>Reactive forms + validation API + server action</td>
+                  <td>reactful forms + validation API + server action</td>
                </tr>
                <tr>
                   <td align="right">
                      <a href="/login">Login</a>
                   </td>
-                  <td>Reactive forms server action authentication</td>
+                  <td>reactful forms server action authentication</td>
                </tr>
                <tr>
                   <td align="right">
