--- a/experiment/builds/quotes.html
+++ b/experiment/builds/quotes.html
@@ -17,11 +17,10 @@
       <script type='module' src='/mnt/b/Repositorios/reactful/experiment/builds/bundle.js'></script></head>
    <body>
       <div id='root'>
-         <h1 tag="h1" uid="6" class="TimeZone">World Clock</h1>
-         <h2 tag="h2" uid="8" class="TimeZone">Europe/Amistedan timezone</h2>
-         <h3 style="color:yellow" tag="h3" uid="10" class="TimeZone"> <!-- -->2024-2-23<!-- -->
-            <!-- -->22:19:36<!-- --> </h3>
-         <h4 tag="h4" uid="12" class="TimeZone">loading...</h4>
+         <h1>My custom error component</h1>
+         <p> <!-- -->Unable to connect. Is the computer able to access the url?<!-- --> </p>
+         <hr />
+         <code>it will be regenerated in each 30min(press F5 to check)</code>
       </div>
    </body>
 </html>
