--- a/experiment/builds/system.html
+++ b/experiment/builds/system.html
@@ -17,11 +17,11 @@
       <script type='module' src='/mnt/b/Repositorios/reactful/experiment/builds/bundle.js'></script></head>
    <body>
       <div id='root'>
-         <h1 tag="h1" uid="6" class="TimeZone">World Clock</h1>
-         <h2 tag="h2" uid="8" class="TimeZone">Europe/Amistedan timezone</h2>
-         <h3 style="color:yellow" tag="h3" uid="10" class="TimeZone"> <!-- -->2024-2-23<!-- -->
-            <!-- -->22:19:36<!-- --> </h3>
-         <h4 tag="h4" uid="12" class="TimeZone">loading...</h4>
+         <h1 tag="h1" uid="3" class="System">Server OS</h1>
+         <h2 tag="h2" uid="5" class="System">server side information</h2>
+         <pre tag="pre" uid="7"
+            class="System">Linux<!-- --> | <!-- -->x64<!-- --> | <!-- -->5.15.133.1-microsoft-standard-WSL2<!-- --> </pre>
+         <section tag="section" uid="9" class="System" hidden>DONT SHOW ME!</section>
       </div>
    </body>
 </html>
