--- a/experiment/builds/quotes.html
+++ b/experiment/builds/quotes.html
@@ -17,10 +17,26 @@
       <script type='module' src='/mnt/b/Repositorios/reactful/experiment/builds/bundle.js'></script></head>
    <body>
       <div id='root'>
-         <h1>My custom error component</h1>
-         <p> <!-- -->Unable to connect. Is the computer able to access the url?<!-- --> </p>
-         <hr />
-         <code>it will be regenerated in each 30min(press F5 to check)</code>
+         <h1 tag="h1" uid="3" class="Quotes">Philosophy quote of the day</h1>
+         <blockquote style="zoom:1.1" tag="blockquote" uid="5" class="Quotes">
+            &lt;!DOCTYPE html&gt;
+            &lt;html&gt;
+            &lt;head&gt;
+            &lt;title&gt;File not found&lt;/title&gt;
+            &lt;/head&gt;
+            &lt;body&gt;
+            &lt;h1&gt;File not found&lt;/h1&gt;
+            &lt;p&gt;The file
+            &lt;b&gt;&quot;/mnt/b/Repositorios/reactful/api/quotes&quot;&lt;/b&gt; cannot be found.
+            It may have been moved, edited, or deleted.&lt;/p&gt;
+            &lt;/body&gt;
+            &lt;script type=&quot;text/javascript&quot;
+            src=&quot;/___vscode_livepreview_injected_script&quot;&gt;&lt;/script&gt;
+            &lt;/html&gt;
+         </blockquote>
+         <hr tag="hr" uid="7" class="Quotes" />
+         <code tag="code" uid="9" class="Quotes">it will be regenerated in each 30min(press F5 to
+            check)</code>
       </div>
    </body>
 </html>
