--- a/document/index.html
+++ b/document/index.html
@@ -27,13 +27,13 @@
       <hr />
 
       <center style='text-align: center !important; padding: 15px;'>
-         <blockquote> minimalist full-stack React Framework
+         <blockquote index> minimalist full-stack React Framework
             <br />with full SSR and simplified states
          </blockquote>
-         <br/><a href='#' onclick="goto('./overview.html')">documentation</a>
+         <br/><a index href='#' onclick="goto('./overview.html')">documentation</a>
       </center>
       
-      <video width="700" height="auto" autoplay loop muted>
+      <video width="590" height="auto" autoplay loop muted onloadstart="this.playbackRate = 1.5;">
          <source src="./avi/intro.mp4" type="video/mp4">
          Seu navegador não suporta o elemento de vídeo.
      </video>
