--- a/experiment/builds/clock.html
+++ b/experiment/builds/clock.html
@@ -19,14 +19,11 @@
       <div id='root'>
          <h1 tag="h1" uid="6" class="TimeZone">World Clock</h1>
          <h2 tag="h2" uid="8" class="TimeZone">Europe/Amistedan timezone</h2>
-         <h3 style="color:yellow" tag="h3" uid="10" class="TimeZone"> <!-- -->2024-2-26<!-- -->
-            <!-- -->21:17:47<!-- --> </h3>
-         <h4 tag="h4" uid="12" class="TimeZone">
-            <code tag="code" uid="14" class="TimeZone">
-               <mark tag="mark" uid="16" class="TimeZone">I&#x27;m a async inner subcomponent
-                  !!!</mark>
-            </code>
-         </h4>
+         <h3 style="color:yellow" tag="h3" uid="10" class="TimeZone"> <!-- -->2024-2-27<!-- -->
+            <!-- -->21:27:3<!-- --> </h3>
+         <h4
+            await="{&quot;name&quot;:&quot;InnerAsyncComponent&quot;,&quot;path&quot;:&quot;/mnt/b/Repositorios/reactful/experiment/routes/clock.tsx&quot;}"
+            tag="h4" uid="12" class="TimeZone">loading...</h4>
       </div>
    </body>
 </html>
